--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "imgur": "^2.3.0",
     "knex": "^2.4.2",
     "lodash": "^4.17.21",
+    "octokit": "^2.0.19",
     "pdf-parse": "^1.1.1",
+    "pdf2pic": "^2.2.1",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
