--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "./src/server.ts",
   "scripts": {
     "dev": "cross-env TS_NODE=true nodemon -e ts,js --exec ts-node -r tsconfig-paths/register ./src/server.ts",
+    "build": "rm -rf ./dist && tsc --skipLibCheck && resolve-tspaths",
+    "start": "node ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "dotenv -e .env -- ts-node -r tsconfig-paths/register ./node_modules/.bin/knex migrate:latest --knexfile ./src/db/knexfile.ts",
     "rollback": "dotenv -e .env -- ts-node -r tsconfig-paths/register ./node_modules/.bin/knex migrate:rollback --knexfile ./src/db/knexfile.ts",
@@ -14,8 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.195",
     "axios": "^1.4.0",
     "bree": "^9.1.3",
+    "cors": "^2.8.5",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
@@ -27,7 +31,8 @@
     "octokit": "^2.0.19",
     "pdf-parse": "^1.1.1",
     "pdf2pic": "^2.2.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -36,6 +41,7 @@
     "dotenv-cli": "^7.2.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
+    "resolve-tspaths": "^0.8.13",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
