--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "target": "es2017",
-    "lib": ["es2017", "esnext.asynciterable", "dom"],
+    "target": "es2022",
+    "lib": ["es2022", "esnext.asynciterable", "dom"],
     "typeRoots": ["node_modules/@types"],
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
@@ -12,7 +12,7 @@
     "module": "commonjs",
     "pretty": true,
     "sourceMap": true,
-    "declaration": true,
+    "declaration": false,
     "outDir": "dist",
     "allowJs": true,
     "noEmit": false,
