Add Backup image upload

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ BOT_TOKEN='your_token'
 IMGUR_CLIENT_ID='your_client_id'
 GITHUB_PAT='your_pat'
 BOOK_CHANNEL_ID='channel_id'
+CLOUDINARY_SECRET="cloudinary_secret"
+CLOUDINARY_KEY='key'
+CLOUDINARY_NAME='cloudName'
