--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/lodash": "^4.14.195",
     "axios": "^1.4.0",
     "bree": "^9.1.3",
+    "cloudinary": "^1.37.2",
     "cors": "^2.8.5",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
