Ai Description, keywords and subject

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ BOOK_CHANNEL_ID='channel_id'
 CLOUDINARY_SECRET="cloudinary_secret"
 CLOUDINARY_KEY='key'
 CLOUDINARY_NAME='cloudName'
+OPENAI_KEY='OPENAI_KEY'
