Auth for delicate process

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ CLOUDINARY_SECRET="cloudinary_secret"
 CLOUDINARY_KEY='key'
 CLOUDINARY_NAME='cloudName'
 OPENAI_KEY='OPENAI_KEY'
+API_PASSWORD='pass'
+JWT_SECRET='SECRET'
