--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "imgur": "^2.3.0",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "lodash": "^4.17.21",
     "octokit": "^2.0.19",
