--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "file-type": "^18.5.0",
     "helmet": "^7.0.0",
     "imgur": "^2.3.0",
     "jsonwebtoken": "^9.0.0",
