--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ CLOUDINARY_NAME='cloudName'
 OPENAI_KEY='OPENAI_KEY'
 API_PASSWORD='pass'
 JWT_SECRET='SECRET'
+AMPQ_URL='ampq_url'
+AMPQ_QUEUE_NAME='ampq_queue_name'
