--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.195",
+    "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "bree": "^9.1.3",
     "cloudinary": "^1.37.2",
@@ -39,6 +40,7 @@
     "winston": "^3.9.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.17",
     "@types/supertest": "^2.0.12",
     "cross-env": "^7.0.3",
