--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env TS_NODE=true nodemon -e ts,js --exec ts-node -r tsconfig-paths/register ./src/server.ts",
     "build": "rm -rf ./dist && tsc --skipLibCheck && resolve-tspaths",
-    "start": "node ./dist/server.js",
+    "start": "NODE_ENV=production node ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "dotenv -e .env -- ts-node -r tsconfig-paths/register ./node_modules/.bin/knex migrate:latest --knexfile ./src/db/knexfile.ts",
     "rollback": "dotenv -e .env -- ts-node -r tsconfig-paths/register ./node_modules/.bin/knex migrate:rollback --knexfile ./src/db/knexfile.ts",
