--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
     "imgur": "^2.3.0",
     "jsonwebtoken": "^9.0.0",
