--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env TS_NODE=true nodemon -e ts,js --exec ts-node -r tsconfig-paths/register ./src/server.ts",
     "build": "rm -rf ./dist && tsc --skipLibCheck && resolve-tspaths",
     "start": "NODE_ENV=production node ./dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "migrate": "dotenv -e .env -- ts-node -r tsconfig-paths/register ./node_modules/.bin/knex migrate:latest --knexfile ./src/db/knexfile.ts",
     "rollback": "dotenv -e .env -- ts-node -r tsconfig-paths/register ./node_modules/.bin/knex migrate:rollback --knexfile ./src/db/knexfile.ts",
     "format": "prettier --write ."
@@ -42,13 +42,16 @@
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/supertest": "^2.0.12",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.2.1",
     "jest": "^29.5.0",
+    "mock-knex": "^0.4.12",
     "prettier": "^2.8.8",
     "resolve-tspaths": "^0.8.13",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
