--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18.14.0'
-      
+          node-version: "18.14.0"
+
       - name: Install npm
         run: npm install -g npm@7
 
@@ -35,7 +35,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}  
+          password: ${{ secrets.PASSWORD }}
           script: |
             cd ${{secrets.DIR}}
             git stash
