Add troubleshooting endpoints

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,11 +40,5 @@
     }
   },
   "include": ["src/**/*.ts", "src/**/*.json", ".env"],
-  "exclude": [
-    "node_modules",
-    "src/http",
-    "src/logs",
-    "src/tests",
-    "src/**/*.spec.ts"
-  ]
+  "exclude": ["node_modules", "src/http", "src/logs", "src/tests"]
 }
