--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ API_PASSWORD='pass'
 JWT_SECRET='SECRET'
 AMPQ_URL='ampq_url'
 AMPQ_QUEUE_NAME='ampq_queue_name'
+ASKPDF_URL='http://api.askyourpdf.com/'
+ASKPDF_KEY='ask_pdf_key'
