--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ BOOK_CHANNEL_ID='channel_id'
 CLOUDINARY_SECRET="cloudinary_secret"
 CLOUDINARY_KEY='key'
 CLOUDINARY_NAME='cloudName'
-OPENAI_KEY='OPENAI_KEY'
+OPENAI_KEY='5'
 API_PASSWORD='pass'
 JWT_SECRET='SECRET'
 AMPQ_URL='ampq_url'
