--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   deploy:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
 
     steps:
@@ -47,7 +51,7 @@ jobs:
             cp .env ./dist
             pm2 restart dbot
 
-   test:
+  test:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
 
