refactor to use ejs - fix broken methods

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
 PORT=3000
 BOT_TOKEN='your_token'
-IMGUR_CLIENT_ID='your_client_id'
 GITHUB_PAT='your_pat'
 BOOK_CHANNEL_ID='channel_id'
-CLOUDINARY_SECRET="cloudinary_secret"
-CLOUDINARY_KEY='key'
-CLOUDINARY_NAME='cloudName'
 OPENAI_KEY='5'
 API_PASSWORD='pass'
 JWT_SECRET='SECRET'
 AMPQ_URL='ampq_url'
 AMPQ_QUEUE_NAME='ampq_queue_name'
 SENTRY_DSN=''
+MATE_UPLOAD_URL='https://image.provider.com/api'
+MATE_UPLOAD_KEY='image_provider_key'
