--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
     "imgur": "^2.3.0",
