--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.ts",
   "scripts": {
     "dev": "cross-env TS_NODE=true nodemon -e ts,js --exec ts-node -r tsconfig-paths/register ./src/server.ts",
-    "build": "rm -rf ./dist && tsc --skipLibCheck && resolve-tspaths",
+    "build": "rm -rf ./dist && tsc --skipLibCheck && resolve-tspaths && cp -r src/public dist/ && cp -r src/views dist/",
     "start": "NODE_ENV=production node ./dist/server.js",
     "test": "jest",
     "migrate": "dotenv -e .env -- ts-node -r tsconfig-paths/register ./node_modules/.bin/knex migrate:latest --knexfile ./src/db/knexfile.ts",
